Phase 2 - updating frontend, adding user login
